@startuml
title AsylumCase Report Generator Class Diagram
skinparam backgroundcolor lightgrey

'End point mappings
class AsylumCaseController {
    - service : AsylumCaseService
    + getCasesBy(queryParameters : CasesQueryParameterDto)) : PageResponseDto
}

class AsylumCaseControllerAdvice {
    + handleException(exception : AsylumCaseNotFoundException) : ErrorDto
    + handleException(exception : BadRequestException) : ErrorDto
    + handleException(exception : PageNotFoundException) : ErrorDto
    + handleException(exception : AmazonDynamoDBException) : ErrorDto
}

'Add cache config Annotations in service
class AsylumCaseService {
    - asylumCaseRepository : AsylumCaseRepository
    - asylumCaseMapper : AsylumCaseMapper
    + getAllAsylumCases() : Iterable<AsylumCaseModel>
    + getCasesBy(queryParameters : CasesQueryParameterDto) : Iterable<AsylumCaseModel>
}

'repo for DynamoDB calls
class AsylumCaseRepository {
    - dynamoDbMapper : DynamoDBMapper
    + find(filterMap : Map<String, List<String>>, rangeMap : Map<String, String[]>) : ScanResultPage<AsylumCase>
    + findAll() : Iterable<AsylumCase>
    + saveAll(cases : Iterable<AsylumCase>)
}

'Entity for data model
class AsylumCase {
    - id : Integer
    - citizenship : String
    - caseOutcome : String
    - completionDate : String
    - dateReceived : String
    - asylumOffice : String
}

class CasesQueryParameterDto {
    - limit : int
    - page : int
    - citizenship : String
    - outcome : String
    - from : String
    - to : String
    - office : String
}

' Part of the  MapStruct dependency
interface AsylumCaseMapper {
    entityToModel(asylumCase : AsylumCase) : AsylumCaseModel
    pageToResponseDto(page : Page) : PageResponseDto
}

AsylumCaseService ---> BadRequestException
AsylumCaseService ---> AsylumCaseNotFoundException
AsylumCaseService ---> PageNotFoundException

AsylumCaseController *- AsylumCaseService
AsylumCaseControllerAdvice -- AsylumCaseController

AsylumCaseService *- AsylumCaseRepository
AsylumCaseMapper *-- AsylumCaseService

AsylumCaseRepository --> AsylumCase
AsylumCaseController --> CasesQueryParameterDto

'Extension
'Association <|-- (owner <|-- pet) Implements
'Composition *-- (pet *-- leg) Instantiation (part of)
'Aggregation (car o-- wheel) Extends (has a)
@enduml